# portfolio-v1

./: portfolio.code-workspace
portfolio/: app.vue  nuxt.config.ts  package-lock.json  package.json
portfolio/layouts/: default.vue
portfolio/pages/: contact.vue  education.vue  experience.vue  index.vue  projects.vue  skills.vue  tools.vue
portfolio/plugins/: vuetify.ts
portfolio_api/: .gitignore  README.md  mix.exs  note.txt  portfolio.service
portfolio_api/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
portfolio_api/lib/: portfolio_api.ex  portfolio_api_web.ex
portfolio_api/lib/portfolio_api/: application.ex  mailer.ex  release.ex  repo.ex
portfolio_api/lib/portfolio_api/mails/: contact_email.ex
portfolio_api/lib/portfolio_api_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
portfolio_api/lib/portfolio_api_web/controllers/: error_json.ex  mail_controller.ex  mail_json.ex
portfolio_api/priv/repo/: seeds.exs
portfolio_api/test/: test_helper.exs
portfolio_api/test/mail/: mail_test.exs
portfolio_api/test/portfolio_api_web/controllers/: error_json_test.exs
portfolio_api/test/support/: conn_case.ex  data_case.ex
qrcode_generator/: Cargo.toml  package-lock.json  test.http
qrcode_generator/src/: lib.rs
