[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
qrcode = "0.13"
serde = "1.0.188"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features=['time', 'json'] }
time = { version = "0.3", features=['wasm-bindgen'] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
